service and controller

--- a/FileHierarcy/API.BLL/API.BLL.csproj
+++ b/FileHierarcy/API.BLL/API.BLL.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\API.Common\API.Common.csproj" />
     <ProjectReference Include="..\API.DAL\API.DAL.csproj" />
   </ItemGroup>
 
